--- a/src/app/pages/roster/roster-division/roster-division.component.html
+++ b/src/app/pages/roster/roster-division/roster-division.component.html
@@ -32,7 +32,7 @@
       (cdkDropListDropped)="onDrop($event)"
     >
       <div
-        class="soldier-box"
+        class="soldierbox"
         *ngFor="let soldier of this.service.data[this.division]?.pool"
         cdkDrag
         cdkDropListSortingDisabled
