--- a/src/app/pages/user-detail/user-detail-component/user-detail.component.html
+++ b/src/app/pages/user-detail/user-detail-component/user-detail.component.html
@@ -1,6 +1,6 @@
 <nb-card>
   <nb-card-header
-    ><span>Username</span>
+    ><span>{{ user.contact.username }}</span>
     <button
       nbButton
       ghost
