--- a/src/app/pages/events/event-overview/event-overview.component.html
+++ b/src/app/pages/events/event-overview/event-overview.component.html
@@ -26,7 +26,7 @@
         ><div class="row">
           <div class="col-4 col-md-6 small-text">Organisator:</div>
           <div class="col-8 col-md-6 right-align small-text">
-            {{ event?.organisator }}
+            {{ event?.organisator.name }}
           </div>
         </div></nb-card-footer
       > </nb-card
