--- a/src/app/pages/roster/soldier-box/soldier-box.component.html
+++ b/src/app/pages/roster/soldier-box/soldier-box.component.html
@@ -1,5 +1,5 @@
 <nb-icon [icon]="this.role" pack="hllroles" class="role-icon"></nb-icon>
-{{ soldier?.username }}
+{{ soldier?.name }}
 <button nbButton ghost (click)="switchAttendance()" class="attendance-icon">
   <nb-icon [icon]="this.attendance" [status]="this.attendanceStatus"></nb-icon>
 </button>
