--- a/src/app/pages/hr/memberlist/memberlist.component.html
+++ b/src/app/pages/hr/memberlist/memberlist.component.html
@@ -1,6 +1,7 @@
 <nb-card>
   <nb-card-header> Member Liste </nb-card-header>
-  <nb-card-body>
-    <ng2-smart-table [settings]="settings" [source]="source"> </ng2-smart-table>
+  <nb-card-body class="table">
+    <ng2-smart-table [settings]="settings" [source]="source" class="table">
+    </ng2-smart-table>
   </nb-card-body>
 </nb-card>
