--- a/src/app/pages/hr/dashboard/dashboard.component.html
+++ b/src/app/pages/hr/dashboard/dashboard.component.html
@@ -1,30 +1,6 @@
-<div class="row">
-  <div class="col-lg-6">
-    <nb-card>
-      <nb-card-header>Aktueller Personalstand</nb-card-header>
-      <nb-card-body>
-        <hr-pie></hr-pie>
-      </nb-card-body>
-    </nb-card>
-  </div>
-  <div class="col-lg-6">
-    <nb-card>
-      <nb-card-header>Veränderung</nb-card-header>
-      <nb-card-body>
-        <hr-line-chart></hr-line-chart>
-      </nb-card-body>
-    </nb-card>
-  </div>
-  <div class="col-lg-6">
-    <nb-card>
-      <nb-card-header>Rekruten</nb-card-header>
-      <nb-card-body><hr-recruits></hr-recruits></nb-card-body>
-    </nb-card>
-  </div>
-  <div class="col-lg-6">
-    <nb-card>
-      <nb-card-header>Warnliste</nb-card-header>
-      <nb-card-body><hr-warnings></hr-warnings></nb-card-body>
-    </nb-card>
-  </div>
-</div>
+<nb-card>
+  <nb-card-header>Pie</nb-card-header>
+  <nb-card-body>
+    <dashboard-component-pie></dashboard-component-pie>
+  </nb-card-body>
+</nb-card>
