Weitere Updates fürs HR Tool.

--- a/src/app/pages/hr/dashboard/dashboard.component.html
+++ b/src/app/pages/hr/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <nb-card>
-  <nb-card-header>Pie</nb-card-header>
-  <nb-card-body>
-    <dashboard-component-pie></dashboard-component-pie>
+  <nb-card-header> Überblick </nb-card-header>
+  <nb-card-body
+    ><div id="main" style="width: 800px; height: 800px"></div>
   </nb-card-body>
 </nb-card>
